Released V2.1.0 to Maven Central